# valveprotos-py

./: .gitignore  README.md  compile_proto.sh  fetch_protos.py  pyproject.toml  requirements.txt
valveprotos/: citadel_clientmessages_pb2.pyi  citadel_gameevents_pb2.py  citadel_gamemessages_pb2.py  citadel_gcmessages_client_pb2.pyi  citadel_gcmessages_common_pb2.pyi  citadel_gcmessages_server_pb2.py  citadel_usermessages_pb2.pyi  gameevents_pb2.py  gameevents_pb2.pyi  gcsdk_gcmessages_pb2.py  network_connection_pb2.py  network_connection_pb2.pyi  networkbasetypes_pb2.pyi  steammessages_pb2.py  usercmd_pb2.pyi  usermessages_pb2.pyi  valveextensions_pb2.py  valveextensions_pb2.pyi
valveprotos_py/: citadel_clientmessages_p2p.py  citadel_clientmessages_pb2.py  citadel_clientmessages_pb2.pyi  citadel_gameevents_p2p.py  citadel_gameevents_pb2.pyi  citadel_gamemessages_p2p.py  citadel_gamemessages_pb2.pyi  citadel_gcmessages_client_p2p.py  citadel_gcmessages_client_pb2.py  citadel_gcmessages_client_pb2.pyi  citadel_gcmessages_common_p2p.py  citadel_gcmessages_common_pb2.py  citadel_gcmessages_common_pb2.pyi  citadel_gcmessages_server_p2p.py  citadel_gcmessages_server_pb2.py  citadel_gcmessages_server_pb2.pyi  citadel_usercmd_p2p.py  citadel_usercmd_pb2.py  citadel_usercmd_pb2.pyi  citadel_usermessages_p2p.py  citadel_usermessages_pb2.py  citadel_usermessages_pb2.pyi  demo_p2p.py  demo_pb2.py  demo_pb2.pyi  enums_clientserver_p2p.py  enums_clientserver_pb2.py  enums_clientserver_pb2.pyi  gameevents_p2p.py  gcsdk_gcmessages_p2p.py  gcsdk_gcmessages_pb2.pyi  netmessages_p2p.py  (+16 more)
(+6 files in other folders)
